# phillip-paine.github.io

./: README.md  _config.yml  about.markdown  cv.md  pyproject.toml
_posts/: 2024-08-03-welcome-to-jekyll.markdown  2024-08-04-Test-Post.md
_posts/2024-08-03-Creating-FPL-Starting-Team/: 2024-08-03-creating-fpl-starting-team.md
_posts/2024-08-03-Creating-FPL-Starting-Team/.ipynb_checkpoints/: 2024-08-02-testing-notebook-checkpoint.ipynb  2024-08-03-Creating-FPL-Starting-Team-checkpoint.ipynb
